# gnome-builder-1

./: config.h.meson  configure.ac  meson.build  meson_options.txt
contrib/egg/: meson.build
contrib/gd/: meson.build
contrib/gstyle/: meson.build
contrib/gstyle/tests/: meson.build
contrib/libeditorconfig/: meson.build
contrib/nautilus/: meson.build
contrib/pnl/: meson.build
contrib/rg/: meson.build
contrib/search/: meson.build
contrib/tmpl/: Makefile.am  meson.build  tmpl-enums.h.in
contrib/xml/: meson.build
data/: meson.build
data/fonts/: meson.build
data/gsettings/: meson.build
data/icons/: meson.build
data/style-schemes/: meson.build
doc/reference/libide/: meson.build
libide/: meson.build
plugins/: meson.build
plugins/autotools/: meson.build
plugins/autotools-templates/: meson.build
plugins/build-tools/: meson.build
plugins/c-pack/: meson.build
plugins/clang/: meson.build
plugins/color-picker/: meson.build
plugins/command-bar/: meson.build
plugins/comment-code/: meson.build
plugins/create-project/: meson.build
plugins/ctags/: meson.build
plugins/devhelp/: meson.build
plugins/file-search/: meson.build
plugins/flatpak/: meson.build
plugins/fpaste/: meson.build
plugins/gcc/: meson.build
plugins/gettext/: meson.build
plugins/git/: meson.build
plugins/gnome-code-assistance/: meson.build
plugins/html-completion/: meson.build
plugins/html-preview/: meson.build
plugins/mingw/: meson.build
plugins/project-tree/: meson.build
plugins/python-pack/: meson.build
plugins/quick-highlight/: meson.build
plugins/support/: meson.build
plugins/symbol-tree/: meson.build
plugins/sysmon/: meson.build
plugins/sysprof/: meson.build
plugins/terminal/: meson.build
plugins/xml-pack/: meson.build
po/: meson.build
tests/: meson.build  test-ide-buffer-manager.c  test-ide-context.c
