plugindir = path_join(get_option('libdir'), 'gnome-builder/plugins')
plugin_deps = [
  dependency('libpeas-1.0'),
  libide_dep,
]

subdir('autotools')
subdir('autotools-templates')
subdir('build-tools')
subdir('c-pack')
subdir('clang')
subdir('color-picker')
subdir('command-bar')
subdir('comment-code')
subdir('contributing')
subdir('create-project')
subdir('ctags')
subdir('devhelp')
subdir('file-search')
subdir('flatpak')
subdir('fpaste')
subdir('gcc')
subdir('gettext')
subdir('git')
subdir('gnome-code-assistance')
#subdir('hello-cpp') # needs libidemm (impossible)
subdir('html-completion')
subdir('html-preview')
subdir('jedi')
subdir('jhbuild')
subdir('mingw')
subdir('project-tree')
subdir('python-gi-imports-completion')
subdir('python-pack')
subdir('quick-highlight')
subdir('support')
subdir('symbol-tree')
subdir('sysmon')
subdir('sysprof')
subdir('terminal')
subdir('todo')
#subdir('vala-pack') # needs vapi files (trivial)
subdir('xml-pack')
